# cpp-shooting-game

./: .gitignore  CMakeLists.txt  Game.h  README.md  main.cpp
Game/: Game.cpp  Game.h
Game/Actors/: Actor.cpp  Actor.h
src/: Game.cpp  Game.h  main.cpp
src/Actors/: Actor.cpp  Actor.h  BombEffect.cpp  BombEffect.h  Enemy.cpp  Enemy.h  Missile.cpp  Missile.h  Ship.cpp  Ship.h
src/Commons/: Math.h  Vector2.cpp  Vector2.h
src/Components/: ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  ScrollSpriteComponent.cpp  ScrollSpriteComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/Scenes/: EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  ReadyScene.cpp  ReadyScene.h  Scene.cpp  Scene.h
